[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Environmnent/Train00.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sounds/Train01.ogg" type="AudioStream" id=3]
[ext_resource path="res://Prefabs/Static/Static_Train.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2047.14, 501.191 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2036.48, 10.3484 )

[node name="Static_Train" type="StaticBody2D" groups=[
"train",
]]
script = ExtResource( 8 )

[node name="Train00" type="Sprite" parent="."]
light_mask = -2147483648
position = Vector2( -896.653, -816.511 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )

[node name="Train01" type="Sprite" parent="."]
light_mask = -2147483648
position = Vector2( 3348.12, -816.511 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )

[node name="Train02" type="Sprite" parent="."]
light_mask = -2147483648
position = Vector2( 7589.45, -816.511 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )

[node name="CollisionShape00" type="CollisionShape2D" parent="."]
position = Vector2( -954.868, -693.153 )
shape = SubResource( 1 )

[node name="CollisionShape01" type="CollisionShape2D" parent="."]
position = Vector2( 3298.2, -693.153 )
shape = SubResource( 1 )

[node name="CollisionShape02" type="CollisionShape2D" parent="."]
position = Vector2( 7527.85, -693.153 )
shape = SubResource( 1 )

[node name="Noise00" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -1155.19, -394.782 )
scale = Vector2( 1.8, 1.8 )
stream = ExtResource( 3 )
pitch_scale = 0.7
max_distance = 15000.0
attenuation = 0.999999

[node name="Noise01" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 3024.33, -421.712 )
scale = Vector2( 1.8, 1.8 )
stream = ExtResource( 3 )
max_distance = 15000.0
attenuation = 0.999999

[node name="Noise02" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 8035.54, -394.784 )
scale = Vector2( 1.8, 1.8 )
stream = ExtResource( 3 )
pitch_scale = 0.7
max_distance = 15000.0
attenuation = 0.999999

[node name="OnTop" type="Area2D" parent="."]
position = Vector2( 0, 26.8505 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape00" type="CollisionShape2D" parent="OnTop"]
position = Vector2( -954.702, -1229.55 )
shape = SubResource( 2 )

[node name="CollisionShape01" type="CollisionShape2D" parent="OnTop"]
position = Vector2( 3304.94, -1229.55 )
shape = SubResource( 2 )

[node name="CollisionShape02" type="CollisionShape2D" parent="OnTop"]
position = Vector2( 7516.99, -1229.55 )
shape = SubResource( 2 )
